src/components/toolbar/title-bar/styles/title-bar.module.css
.titleBar {
    display: flex;
    flex-grow: 1;
    min-inline-size: 0;
    justify-content: flex-start;
}

.titleBar > .titleContainer {
    display: flex;
    flex-grow: 1;
    min-inline-size: 0;
}

.cell {
    display: flex;
    min-inline-size: 0;
    align-items: baseline;
    background-color: var(--colors-white);
    padding: 6px;
    border-radius: 5px;
}

.title {
    font-size: 13px;
    line-height: 1.2;
    font-weight: 500;
    color: var(--colors-grey800);
    min-inline-size: 0;
    margin-block-start: 2px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.title.loading,
.title.unsaved {
    color: var(--colors-grey500);
    font-style: italic;
    font-weight: normal;
}

.suffix {
    margin-inline-start: 4px;
}

.suffix.edited {
    color: var(--colors-grey600);
    margin-block-start: 2px;
    margin-inline-start: 4px;
    font-size: 11px;
    letter-spacing: -0.2px;
    font-family: monospace;
    line-height: normal;
}

.suffix.edited::before {
    content: '·';
    margin-inline-end: 4px;
}

